--- a/src/app/admincloselog/admincloselog.component.css
+++ b/src/app/admincloselog/admincloselog.component.css
@@ -1,5 +1,7 @@
 .departmenCategoryText {
-    padding: 0.5%;
+  padding-top: 5.30%;
+  padding-left: 8.5%;
+  margin-bottom:5.29%;
 }
 
 body {
@@ -205,7 +207,7 @@ body {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
     padding: 20px;
     width: 85%;
-    margin: auto auto;
+    margin-left: 8.56%;
   }
 .status {
         background-color: #7F4D3E;
