--- a/src/app/admindashboard/admindashboard.component.css
+++ b/src/app/admindashboard/admindashboard.component.css
@@ -35,7 +35,8 @@ body {
   }
   #logoDiv{
   
-    margin-left: 1%;
+    border: 1px solid red;
+    margin-left: 2%;
     margin-top: 7.2px;
   
   }
