--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -209,7 +209,7 @@ select#Cater,input.form-control {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
   padding: 20px;
   width: 85%;
-  margin: auto auto;
+ margin-left: 5.6%;
 }
 
 .btnAvailableTech{
