--- a/src/app/adminprogress/adminprogress.component.css
+++ b/src/app/adminprogress/adminprogress.component.css
@@ -1,11 +1,17 @@
 
   .departmenCategoryText {
-    padding: 8.4px;
+    padding-top: 4.08%;
+    padding-left: 8.5%;
+    margin-bottom:5.29%;
   }
   
   body {
 
     width: 100%;
+  }
+
+  .content{
+    margin-left: 10%;
   }
 .header {
     height: 82px;
@@ -207,7 +213,7 @@ a:disabled, a[disabled] {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
     padding: 20px;
     width: 85%;
-    margin: auto auto;
+    margin-left: 8.55%;
   }
     /*Footer*/
 footer{
