--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="">
   <!-- <body class="container"> -->
       <div class="log d-flex justify-content-end">
           <nav class="header">
