--- a/src/app/stafffeedback/stafffeedback.component.css
+++ b/src/app/stafffeedback/stafffeedback.component.css
@@ -1,3 +1,23 @@
+.StaffDetails{
+  margin-left: 3.7%;
+  margin-top: 2.9%;
+}
+.displayFlex{
+  display: flex;
+  flex-direction: row;
+}
+
+.left{
+  margin-left: 44.9%;
+}
+
+.backFrom{
+
+ margin-left: 5.8%;
+  margin-top: 4.2%;
+ }
+
+
 body {
     width: 100%;
   }
@@ -5,7 +25,9 @@ body {
     margin: -0.8%;
   }
 
-
+#leftRadio{
+  margin-left: 1%;
+}
 /* Start of the navigation bar*/
 .header {
     height: 82px;
@@ -63,7 +85,7 @@ body {
     float: left;
    
     box-shadow: 5px 0 2px #969292;
-    width: 335px;
+    width: 356px;
     height: 1055px;
     
   }
@@ -143,16 +165,14 @@ body {
   .reqhead1{
      
     font-weight: bold;
-  font-size: 28px;
-  color: #000000;
-  height: 40px;
-    margin:5% 6%;
-    padding-left: 50px;
+    font-size: 28px;
+    color: #000000;
 }
 
 
 .down{
-  margin: 7%;
+  margin-left: 20%;
+  
 }
 
 .color {
