--- a/src/app/staffsendrequest/staffsendrequest.component.css
+++ b/src/app/staffsendrequest/staffsendrequest.component.css
@@ -1,3 +1,21 @@
+.StaffDetails{
+  margin-left: 5%;
+}
+
+.displayFlex{
+  display: flex;
+  flex-direction: row;
+}
+
+
+.alert{
+  background: #005596;
+  color: white;
+}
+
+.left{
+  margin-left: 40%;
+}
 body {
     width: 100%;
   }
@@ -61,7 +79,7 @@ body {
    
     box-shadow: 5px 0 2px #969292;
     width: 335px;
-    height: 1055px;
+    height: 1255px;
     
   }
   .breadcrumbNav {
@@ -128,6 +146,7 @@ color: #000000;
       float: right;
       width: 80%;
       margin-right: 0%;
+      margin-top: 0%;
     }
     /*Footer*/
   footer{
