--- a/src/app/techpage/techpage.component.css
+++ b/src/app/techpage/techpage.component.css
@@ -1,3 +1,11 @@
+
+  .departmenCategoryText {
+    padding-top: 4.08%;
+    padding-left: 8.5%;
+    margin-bottom:5.29%;
+  }
+
+
 body {
     width: 100%;
   }
@@ -55,72 +63,62 @@ body {
     background-color: #005596;
   }
   /* End of the navigation bar*/
-  /* Start of  Everything on the side nav*/
-  .sideNav {
-    float: left;
-   
-    box-shadow: 5px 0 2px #969292;
-    width: 335px;
-    height: 1055px;
-    
-  }
-  .breadcrumbNav {
-    margin: 12% 10px;
-    padding: 20px 30px;      
-  }
-  #breadcrumbpadding {
+  /*Start of Side navigation */
+.sideNav {
+  float: left;
+ 
+  box-shadow: 5px 0 2px #969292;
+  width: 335px;
+  height: 1055px;
   
-    width: 120px;  
-    padding: 6px 0;
-  }
-  a {
-    padding-top: 20px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    /* identical to box height */
-    letter-spacing: 0.035em;
-    text-transform: capitalize;
-    color: #005596;
-    text-decoration: none;
-  }
-  .breadcrumbNav ul {
-    list-style:none ;
-    flex-direction: column;
-  }
-  .breadcrumb-item.active {
-    border-bottom: 3px solid #005596;
-    width: 115px;  
-  }
-  /* End of Everything on the side nav*/
+}
+
+.breadcrumbNav {
+  margin: 12% 10px;
+  padding: 20px 30px;      
+}
+#breadcrumbpadding {
+  width: 120px;  
+  padding: 6px 0;
+}
+
+a {
+  padding-top: 20px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */
+  letter-spacing: 0.035em;
+  text-transform: capitalize;
+  color: #005596;
+  text-decoration: none;
+}
+
+.breadcrumbNav ul {
+  list-style:none ;
+  flex-direction: column;
+}
+.breadcrumb-item.active {
+  border-bottom: 3px solid #005596;
+  width: 115px;  
   
-  /*Disable the active link*/
-  a:disabled, a[disabled] {
-    color: #005596;
-  }
-  .anchorBorder{
-    margin:0 20%;
-  }
-  /*Adding a hover effect on the sidenav links*/
-  #hover:hover {
-    font-weight: bold;
-   
-   
-  }
-  /*Cards that show progress on top on the right content*/
-  .ticket{
-    border: 1px solid #ccc;
-    box-shadow: 2px 2px 2px rgba(94, 93, 93, 0.993);
-    font-family: "Times New Roman";
-    font-style: normal;
-    
-  
-  }
-  .ticket:hover{
-    text-decoration: none;
-    border-left: 8px solid rgb(14, 60, 90);
-  }
+}
+
+a:disabled, a[disabled] {
+  color: #005596;
+}
+
+.anchorBorder{
+
+  margin:0 20%;
+}
+
+#hover:hover {
+  font-weight: bold;
+  color: #005596;
+} 
+
   /*SideNav content on the left*/
   .container2{
     margin-top: 3.8%;
@@ -145,58 +143,11 @@ body {
       /* bottom: 0;
       width: 100%; */
     }
-    
-    
-    
-    /*Navigation*/
-  /*   
-    nav {
-      height: 72px;
-      background: #0c0c0c;
-      width: 100%;
-      margin: 0;
-      position: fixed;
-      font-family: 'Roboto Condensed',sans-serif;
-      font-size: 20px;
-      display: flex;
-      justify-content: space-between;
-      padding:0 16px 0 0;
-      box-sizing: border-box;
-      z-index: 100;
-    }
-    
-    nav a {
-      padding: 0 32px;
-      color: #eee;
-      transition: 0.4s;
-    }
-    
-    nav a:hover {
-      text-decoration: none;
-      color: red;
-    }
-    
-    nav ul {
-      display: flex;
-      list-style: none;
-      justify-content: space-around;
-      align-items: center;
-      height: 100%;
-      margin: 0;
-    }
-    
-    .active {
-      color:#0e0d0d;
-    } */
   .table {
       width: 90%;
       margin: auto auto;
     }
-  select#Cater,input.form-control {
-      width: 100%;
-      padding: 0 0;
-      border-radius: 0.25rem;
-    }
+
   .content{
     border: 1px solid #ccc;
     overflow-y: scroll;
@@ -206,7 +157,6 @@ body {
     width: 85%;
     margin: auto auto;
   }
-  
   .btnAvailableTech{
       background: black;
       color: white;
@@ -214,7 +164,6 @@ body {
       height: 30px;
       border-radius: 5px;
       text-align: center;
-  
-  
-    }
+
+}
   
