--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -1,39 +1,16 @@
-<div class="log d-flex justify-content-end">
-    <nav class="header">
-        <div id="logo-text">
-            <a>
-                <img src="../../../assets/images/tut.png" alt="SMART FARM"
-                    style="float: left;height: 72px;width: 225px;" routerLink="read">
-            </a>
-        </div>
-        <div id="menu-icon">
-            <i class="fas fa-bars"></i>
-        </div>
-
-    </nav>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-
-
-<body>
-    <div class="d-flex justify-content-between">
-    
-    </div>
-        <div class="sideNav">
-            <nav class="breadcrumbNav">
-                <ul>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                            routerLink="/staffpage"><b>REQUEST</b></a></li>
-                    </ul>
-                    <ul>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                            disabled="true"><b>TRACKING</b></a></li>
-                </ul>
-   
+<div class="">
+    <!-- <body class="container"> -->
+        <div class="log d-flex justify-content-end">
+            <nav class="header">
+                <div id="logoDiv">
+                    <a>
+                        <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
+                            style="float: left;height: 70px;width: 225px;" routerLink="read">
+                    </a>
+                </div>
+                <div id="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </div>
                 <ul>
                     <li>
         
@@ -41,29 +18,54 @@
                                 class="btn btn-success">LOGOUT</button></a>
                     </li>
                 </ul>
-    
+        
             </nav>
         </div>
+</div>
+<body>
+    <div class="d-flex justify-content-between">
+
+    </div>
+    <div class="sideNav">
+        <nav class="breadcrumbNav">
+            <ul>
+                
+                <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/sendrequest">Send Request</a></li> 
+                <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Track Request</a></li> 
+            </ul>
+        </nav>
+    </div>
     <div class="contentContainerRight">
-        <div class="backFrom" >
-            <h3 class="toptitle">Staff Track Request</h3>
+       
+        <div class="StaffDetails" *ngIf="staff">
+            <h3 class=""><small><b>Campus:</b> {{staff.campus}}</small></h3>
+            <h3 class=""><small><b>Faculty:</b> {{staff.faculty}}</small></h3>
+            <div class="displayFlex">
+                <h3 class=""><small><b>Department:</b> {{staff.department}}</small></h3>
+                <h3 class="left" ><small><b>Staff Name:</b> {{staff.staff_name}} {{staff.staff_surname}}</small></h3>
+            </div>
+            
         </div>
-        <div class="stats d-flex justify-content-left px-4">
+
+        <div class="backFrom" >
+            <h3 class="reqhead1">Staff Track Request</h3>
+        </div>
+        <div class="stats d-flex justify-content-left " style="padding-left:3.8%">
         <form>
 
-            <div class="w-100% rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" >
-                <h1><b>Click on the tabs to view progress of your request(s)</b></h1>
-                <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo         {{unAssign}}</label>
-                <label for="zero" id="blue" class="Assigned" (click)="assignTask()">Assigned     {{assigned}}</label>
-                <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress      {{inprogress}}</label>
-                <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold  {{hold}}</label>
-                <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done {{done}}</label>
+            <div class="w-110% rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" style="width: 75%;" >
+                <h1 ><small class="topText">Click to view progress of your request(s)</small></h1>
+                <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo </label>
+                <label for="zero" id="blue" class="Assigned" (click)="assignTask()">Assigned </label>
+                <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress </label>
+                <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold </label>
+                <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done </label>
             </div>
             </form>
-<form>
+            <form style="margin-top: -10.5%;">
     
-            <div class="d-flex justify-content-center w-100 rounded-5 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" style="width:100%">
-                <h1><b>REQUESTS</b></h1>
+            <div class="d-flex justify-content-center w-100 rounded-5 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" style="width:100%; height: auto;overflow-y: scroll;">
+                <h1><small><b>REQUESTS</b></small></h1>
                 <div class="middleTableDivTextMargin" *ngFor="let request of allRequest">
                     <p>Category: {{request.category}}</p>
                     <p>Description: {{request.description}}</p>
